# ok-msg-desktop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  changelog.txt  conanfile.txt  config.h.in  inno-setup-script.iss  org.okstar.ok-msg.yaml  translation.py  vcpkg.json
cmake/: build.cmake  (+8 more)
src/: Bus.cpp  Bus.h  CMakeLists.txt  FontManager.cpp  FontManager.h  application.cpp  application.h  application.qss  gui.cpp  gui.h  ipc.cpp  ipc.h  launcher.cpp  launcher.h  main.cpp  ok-msg-beta.desktop.in  profilelocker.cpp
src/UI/: CMakeLists.txt  WindowManager.cpp  WindowManager.h
src/UI/component/: CMakeLists.txt  PluginInfoForm.cpp  PluginInfoForm.h  PluginItemForm.cpp  PluginItemForm.h  PluginManagerForm.cpp  PluginManagerForm.ui
src/UI/core/: CMakeLists.txt  ControllerManager.cpp  ControllerManager.h  FontManager.cpp  FontManager.h  I18N.cpp  I18N.h  SettingManager.cpp  SettingManager.h  ui.h
src/UI/layout/: FlowLayout.cpp  FlowLayout.h
src/UI/login/: CMakeLists.txt
src/UI/main/: CMakeLists.txt
src/UI/resources/: CMakeLists.txt
src/UI/tool/: activatedialog.cpp  activatedialog.h  adjustingscrollarea.h  callconfirmwidget.cpp  callconfirmwidget.h  chattextedit.cpp  chattextedit.h  croppinglabel.h  flyoutoverlaywidget.cpp  friendrequestdialog.cpp  friendrequestdialog.h  identicon.cpp  movablewidget.h  profileimporter.cpp  profileimporter.h  removefrienddialog.cpp  removefrienddialog.h  screengrabberchooserrectitem.cpp  screengrabberchooserrectitem.h  screengrabberoverlayitem.cpp  screengrabberoverlayitem.h  screenshotgrabber.cpp  screenshotgrabber.h  toolboxgraphicsitem.cpp  toolboxgraphicsitem.h  verticalonlyscroller.cpp  verticalonlyscroller.h
src/UI/widget/: CMakeLists.txt  GenericForm.cpp  GenericForm.h  MoveableBar.cpp  MoveableBar.h  OMenuWidget.cpp  OMenuWidget.h  OWidget.cpp  OWidget.h  OWindow.cpp  OWindow.h
src/UI/window/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  WindowManager.cpp  WindowManager.h  widgetfactory.cpp  widgetfactory.h
src/base/: CMakeLists.txt  MessageBox.cpp  MessageBox.h  OkAccount.cpp  OkAccount.h  OkProcess.h  OkSettings.cpp  OkSettings.h  Page.cpp  Page.h  PageFactory.h  Participant.cpp  Participant.h  RecursiveSignalBlocker.cpp  RecursiveSignalBlocker.h  RoundedPixmapLabel.cpp  RoundedPixmapLabel.h  StringUtils.cpp  StringUtils.h  Styles.h  SvgUtils.cpp  SvgUtils.h  applicationinfo.cpp  applicationinfo.h  autorun.h  basic_types.h  colorhelper.h  compatiblerecursivemutex.h  files.cpp  files.h  hashs.cpp  hashs.h  identicon.cpp  identicon.h  images.h  interface.h  jid.cpp  jid.h  jsons.h  logs.cpp  (+26 more)
src/base/system/: sys_info.h
src/base/test/: windows.cpp  x11_display.cpp
src/core/utils/: desktopinfo.cpp  desktopinfo.h  filenamehandler.cpp  filenamehandler.h  screengrabber.cpp  screengrabber.h
src/icon/: icon.rc
src/lib/: CMakeLists.txt
src/lib/audio/: CMakeLists.txt  audio.cpp  audio.h  iaudiocontrol.h  iaudiosettings.h  iaudiosink.h  iaudiosource.h  player.cpp  player.h
src/lib/backend/: BaseService.cpp  BaseService.h  CMakeLists.txt  OkCloudService.cpp  OkCloudService.h  PassportService.cpp  PassportService.h  UserService.cpp  UserService.h
src/lib/board/: Board.cpp  Board.h  Bridge.cpp  Bridge.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerSelect.cpp  ControllerSelect.h  ControllerVoice.cpp  ControllerVoice.h  Defines.cpp  Defines.h  Draw.cpp  Draw.h  DrawFile.cpp  DrawFile.h  DrawLine.cpp  DrawLine.h  DrawMove.cpp  DrawMove.h  DrawRemove.cpp  DrawRemove.h  DrawText.cpp  DrawText.h  smartboard.cpp  smartboard.h  smartboardcontroller.cpp  smartboardcontroller.h  smartboardcontrollerselect.cpp  smartboardcontrollerselect.h  smartboardcontrollervoice.cpp  smartboardcontrollervoice.h  smartboarddraw.cpp  smartboarddraw.h  smartboarddrawfile.cpp  smartboarddrawfile.h  smartboarddrawline.cpp  smartboarddrawline.h  smartboarddrawmove.cpp  (+5 more)
src/lib/log/: CMakeLists.txt  LogManager.cpp  LogManager.h
src/lib/messenger/: CMakeLists.txt  IM.cpp  IM.h  IMCall.cpp  IMCall.h  IMConference.cpp  IMConference.h  IMFile.cpp  IMFile.h  IMFileTask.cpp  IMFileTask.h  IMFriend.cpp  IMFriend.h  IMFromHostHandler.h  IMGroup.cpp  IMGroup.h  IMJingle.cpp  IMJingle.h  IMJingleSession.cpp  IMJingleSession.h  IMMeet.cpp  IMMeet.h  IMMessage.cpp  IMMessage.h  IMRoomHelper.h  Messenger.cpp  Messenger.h  messenger.cpp  messenger.h
src/lib/network/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  Makefile  NetworkHttp.cpp  NetworkHttp.h  network.h
src/lib/ortc/: CMakeLists.txt  ok_rtc.cpp  ok_rtc.h  ok_rtc_defs.cpp  ok_rtc_defs.h  ok_rtc_manager.cpp  ok_rtc_manager.h  ok_rtc_proxy.h  ok_rtc_renderer.h
src/lib/plugin/: CMakeLists.txt  OkOptions.cpp  OkOptions.h  PluginInfo.cpp  PluginInfo.h  coloropt.cpp  coloropt.h  common.cpp  common.h  ok_iconset.cpp  ok_iconset.h  optionstree.cpp  optionstree.h  pluginhost.cpp  pluginhost.h  pluginmanager.cpp  pluginmanager.h  textutil.cpp  textutil.h  varianttree.cpp  varianttree.h
src/lib/session/: AccountItem.cpp  AccountItem.h  AuthSession.cpp  AuthSession.h  CMakeLists.txt  profile.cpp  profile.h
src/lib/settings/: CMakeLists.txt  OkSettings.cpp  OkSettings.h  applicationinfo.cpp  settings.cpp  settings.h  style.cpp  style.h  translator.cpp  translator.h
src/lib/storage/: CMakeLists.txt  StorageManager.h  StoreageManager.cpp
src/lib/storeage/: CMakeLists.txt  StoreageManager.cpp  StoreageManager.h
src/lib/ui/: CMakeLists.txt  gui.cpp  gui.h  ui.h
src/lib/video/: CMakeLists.txt  cameradevice.cpp  cameradevice.h  camerasource.cpp  camerasource.h  ivideosettings.h  videoframe.cpp  videoframe.h  videomode.cpp  videomode.h  videosource.cpp  videosource.h
src/modules/: CMakeLists.txt  module.h
src/modules/classroom/: CMakeLists.txt
src/modules/config/: CMakeLists.txt
src/modules/document/: CMakeLists.txt
src/modules/im/: CMakeLists.txt  res.qrc  res.qrc.depends  translations_IM.qrc
src/modules/meet/: CMakeLists.txt
src/modules/painter/: CMakeLists.txt
src/resources/: application.qrc  resources.qrc
(+1253 files in other folders)
